- add /etc/mke2fs.conf in order to format ext3fs with 4k blocks (#27377)
- diskdrake
  o fix 1.9TB displayed as 1TB
- do not ask for updates at end of installation when updates are already
  available (network installs) (#30344)
- do not try to configure dvd devices since /dev is wiped out at
  reboot
- fix detecting usb drives (#13395)
  (need a perl-MDK-Common 1.2.5)
- hw support:
  o handle snd-cs5530 driver
- install fonts-ttf-dejavu & fonts-ttf-liberation by default
- allow umounting cdrom during a transaction
- really allow having name with "/" in media.cfg
- use "mkfs.ext3" instead of "mkfs.ext2 -J"
  (to have dir_index & resize_inode features)
  (cf Frederik Himpe 23 Apr 2007 mail on cooker)

Version 10.4.129 - 4 April 2007, by Pascal "Pixel" Rigaux

- move advertising out of drakx-installer-stage2 into drakx-installer-advertising

Version 10.4.128 - 3 April 2007, by Pascal "Pixel" Rigaux

- don't configure /etc/kde/kdm/kdmrc if it doesn't exist
  (other kdmrc.rpmnew will be created, many important values will be missing)
- fix ext3 formatting with label and progress bar (#30032)
- fix taking screenshot
- prefering libkdebase4-kmenuedit over libkdebase46-kmenuedit to ensure
  kdebase-kmenuedit is chosen instead of kdebase4-kmenuedit

Version 10.4.126 - 29 March 2007, by Olivier "blino" Blin

- use pci_domain when matching sysfs device and computing
  sysfs device path

Version 10.4.124 - 29 March 2007, by Olivier "blino" Blin

- correctly mark "update" media in urpmi.cfg
- fix multiple detection of PCI network cards with the same driver (#29688)
- rename o->{build_live_system} as more generic o->{match_all_hardware} name
- automatically install network drivers when matching all hardware

Version 10.4.122 - 29 March 2007, by Thierry Vignaud

- final banner image
- fix installing kernel-source-stripped
- include mmc_block for card readers

Version 10.4.120 - 23 March 2007, by Pascal "Pixel" Rigaux

- allow having name with "/" in media.cfg