@@ -1,3 +1,6 @@
+- auto_install:
+  o allow "automatic=met:http,ser:server,dir:/pub/dir
+    kickstart=/pub/auto_inst.cfg" to get http://server/pub/auto_inst.cfg (#31474)
 - add /etc/mke2fs.conf in order to format ext3fs with 4k blocks (#27377)
 - diskdrake
   o fix 1.9TB displayed as 1TB
